--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
   </ol>
   <div class="carousel-inner">
     <!-- add images here, their src in css -->
@@ -25,6 +32,20 @@
     <div class="carousel-item image2">
     </div>
     <div class="carousel-item image3">
+    </div>
+    <div class="carousel-item image4">
+    </div>
+    <div class="carousel-item image5">
+    </div>
+    <div class="carousel-item image6">
+    </div>
+    <div class="carousel-item image7">
+    </div>
+    <div class="carousel-item image8">
+    </div>
+    <div class="carousel-item image9">
+    </div>
+    <div class="carousel-item image10">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -37,6 +58,5 @@
   </a>
 </div>
 <!-- partial -->
-  
 </body>
 </html>
