--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </div>
     <div class="carousel-item image7">
     </div>
-    <!-- <div class="carousel-item image8">
-    </div> -->
+    <div class="carousel-item image8">
+    </div>
     <div class="carousel-item image9">
     </div>
     <div class="carousel-item image10">
