--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
   </ol>
   <div class="carousel-inner">
     <!-- add images here, their src in css -->
@@ -34,6 +36,10 @@
     <div class="carousel-item image5">
     </div>
     <div class="carousel-item image6">
+    </div>
+    <div class="carousel-item image7">
+    </div>
+    <div class="carousel-item image8">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
